# actix-web-actors-websocket-demo

./: .gitignore  Cargo.toml
.history/src/messages/hall/: user_mail_20230923050310.rs  user_mail_20230923050916.rs
examples/: deserialize_seed.rs  factory.rs  message_dispatcher2.rs  message_handler.rs  test.rs  test2.rs
src/: README.md  dispatcher.rs  main.rs  messages.rs  router.rs  stream_handler.rs
src/messages/: error_message.rs  examples.rs  get_tasks.rs  hall.rs  login.rs  resp.rs  text_message.rs
src/messages/examples/: error_message.rs  get_tasks.rs  resp.rs  text_message.rs
src/messages/hall/: login.rs  user_mail.rs
static/: websocket_client.html
