[package]
name = "actix-web-actors-websocket-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
async-trait = "0.1.73"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
